# snip-lookup.nvim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  install.sh  snippets.yaml  tag_new_release.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml
doc/: snip-lookup.nvim.txt
lua/snip-lookup/: config.lua  init.lua
src/: lib.rs
tests/: snip-lookup_spec.lua
