[package]
name = "snip_lookup"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.2.2", features = ["neovim-0-8"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
